Scripts and changes to code to start the vm in snap mode

--- a/main/django-app/templates/novnc/vnc.html
+++ b/main/django-app/templates/novnc/vnc.html
@@ -396,6 +396,7 @@ function getVideoList() {
       return response.json();
     })
     .then(data => {
+      document.getElementById('videoList').innerHTML = '';
       const select = document.getElementById('videoList');
       data.video_files.forEach(file => {
         const option = document.createElement('option');
