--- a/main/django-app/templates/registration/login.html
+++ b/main/django-app/templates/registration/login.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
     body {
-       background-image: url('{% static 'novnc/images/anisur-rahman-K2b7UDed6uQ-unsplash.jpg' %}');
+       background-image: url('{% static 'novnc/images/estig2.jpg' %}');
        background-repeat: no-repeat;
        background-attachment: fixed;
-       background-size: cover;
+       background-size: 100% 100%;
     }
 </style>
 </head>
