Chain of custody: Upload comment and download report

--- a/main/django-app/templates/novnc/vnc.html
+++ b/main/django-app/templates/novnc/vnc.html
@@ -31,6 +31,66 @@
         }
 
 
+
+function recordComment(comment) {
+    const uuid = getParameterByName('uuid');
+    if (uuid && comment) {
+        fetch('/api/record_comment/', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+                'X-CSRFToken': getCookie('csrftoken')
+            },
+            credentials: 'include',
+            body: JSON.stringify({
+                comment: comment,
+                uuid: uuid
+            })
+        })
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Error: ' + response.status);
+            }
+            return response.json();
+        })
+        .then(data => {
+            showAlert('Comment recorded successfully!', 'w3-orange');
+            document.getElementById('commentField').value = ''; 
+            document.getElementById('id04').style.display = 'none';
+            console.log(data);
+        })
+        .catch((error) => {
+            showAlert('Error sending comment to server!', 'w3-red');
+            console.error('Error:', error);
+            document.getElementById('id04').style.display = 'none';
+        });
+    }
+}
+
+
+function downloadChainOfCustody() {
+  const uuid = getParameterByName('uuid');
+
+  showAlert("Chain of custody report download sent...", "w3-teal")
+  fetch('/api/custody/' + uuid + '/', {
+      method: 'GET',
+      credentials: 'include', // Send session cookie with the request
+  })
+  .then(response => response.blob())
+  .then(blob => {
+      // Create a URL for the blob
+      showAlert("Download started", "w3-teal")
+      const url = window.URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url;
+      a.download = "chainOfCustody.docx";
+      document.body.appendChild(a); // we need to append the element to the dom -> otherwise it will not work in firefox
+      a.click();    
+      a.remove();  //afterwards we remove the element again         
+  });
+}
+
+
         function startVM() {
             const uuid = getParameterByName('uuid');
             if (uuid) {
@@ -724,6 +784,36 @@ function showAlert(message, color = 'w3-green') {
 </div>
 
 
+<!-- Chain of custody modal -->
+<div id="id04" style="position: fixed;" class="w3-modal w3-animate-top w3-animate-opacity">
+    <div class="w3-modal-content">
+        <div class="w3-card-4">
+
+            <span onclick="document.getElementById('id04').style.display='none'" class="w3-button w3-display-topright">&times;</span>
+
+            <header class="w3-container w3-blue">
+                <h1>Chain of Custody</h1>
+            </header>
+
+            <div class="w3-container">
+                <p>Record comment:</p>
+                <textarea id="commentField" style="width: 100%; height: 150px;"></textarea>
+                <button style="background: unset;" class="w3-button w3-round-large w3-green" onclick="recordComment(document.getElementById('commentField').value)">Save Comment</button>
+                <button style="background: unset;" class="w3-button w3-round-large w3-orange" onclick="downloadChainOfCustody()">Download Chain of Custody</button>
+            </div>
+
+            <footer class="w3-container w3-blue">
+                <div class="w3-container w3-cell-middle w3-center">
+                    <br>
+                    <button style="background: unset;" class="w3-button w3-round-large w3-red" onclick="document.getElementById('id04').style.display='none'">Close</button>
+                    <br>
+                    <br>
+                </div>
+            </footer>
+        </div>
+    </div>
+</div>
+
 
 
 
@@ -815,6 +905,9 @@ function showAlert(message, color = 'w3-green') {
 
             <!-- RecodVideo icon -->
             <i id="RecordIcon" class="material-icons w3-text-white noVNC_button" title="Video recording" onclick="document.getElementById('id03').style.display='block'">videocam</i>
+
+            <!-- ChainOfCustody icon -->
+            <i id="ChainIcon" class="material-icons w3-text-white noVNC_button" title="Manage Chain of Custody" onclick="document.getElementById('id04').style.display='block'">work_history</i>
 
 
             <!-- Settings -->
