Close Chain of Custody modal when the users clicks download button

--- a/main/django-app/templates/novnc/vnc.html
+++ b/main/django-app/templates/novnc/vnc.html
@@ -80,6 +80,7 @@ function downloadChainOfCustody() {
   .then(blob => {
       // Create a URL for the blob
       showAlert("Download started", "w3-teal")
+      document.getElementById('id04').style.display = 'none';
       const url = window.URL.createObjectURL(blob);
       const a = document.createElement('a');
       a.href = url;
