--- a/main/django-app/templates/novnc/vnc.html
+++ b/main/django-app/templates/novnc/vnc.html
@@ -36,7 +36,24 @@ function introspectVM() {
 
     if (uuid) {
         const introspectWindow = window.open('', '_blank');
-        introspectWindow.document.write('Making a live memory snapshot and loading introspection data. Please wait...');
+        introspectWindow.document.write(`
+            <!DOCTYPE html>
+            <html>
+            <head>
+                <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+            </head>
+            <body>
+                <div class="w3-container w3-center w3-display-middle">
+                    <div class="w3-large w3-margin-bottom">Making a live memory snapshot and loading introspection data. Please wait...</div>
+                    <div class="w3-spin w3-text-blue">
+                        <i class="fa fa-spinner fa-spin" style="font-size:48px"></i>
+                    </div>
+                </div>
+            </body>
+            </html>
+        `);
+
 
         fetch('/api/introspect/' + uuid + '/', {
             method: 'GET',
