--- a/main/django-app/templates/main.html
+++ b/main/django-app/templates/main.html
@@ -114,6 +114,7 @@ h1, h2, h3, h4, h5, h6 {
       <a href="netdata" target=”_blank” class="w3-bar-item w3-button">Server Status</a>      
       <a href="shell" target=”_blank” class="w3-bar-item w3-button">Shell</a>      
       <a href="vm-list" class="w3-bar-item w3-button">List VM's</a>      
+      <a href="api/exportmetrics" class="w3-bar-item w3-button">Metrics</a>      
       <a href="logout" class="w3-bar-item w3-button">Logout</a>      
     </div>
   </div>
